# binomialhash

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: architecture.md  async-and-threading.md  exports.md  manifold-navigation.md  middleware.md  provider-adapters.md  statistical-analysis.md  token-counting.md
docs/reference/: adapters.md  context.md  core.md  exporters.md  extract.md  index.md  insights.md  manifold.md  middleware.md  predicates.md  schema.md  stats.md  tokenizers.md  tools.md
examples/: 01_openai_agent_loop.py  02_anthropic_tool_use.py  03_gemini_function_calling.py  04_openai_agents_sdk.py  05_fastapi_streaming.py  06_langchain_tools.py  07_multi_agent_handoff.py  08_mcp_server_middleware.py  09_multi_tenant_isolation.py  10_financial_analysis.py  11_rag_retrieval.py  12_export_artifacts.py  13_context_budget.py  14_manifold_deep_dive.py  15_openai_responses_api.py  16_live_multi_provider.py  17_spatial_reasoning_live.py  README.md
java/: build.gradle.kts  settings.gradle.kts
src/binomialhash/: __init__.py  _bootstrap_core.py  _manifold_methods.py  _stats_methods.py  context.py  core.py  extract.py  insights.py  middleware.py  predicates.py  schema.py  typing_model.py
src/binomialhash/adapters/: __init__.py  anthropic.py  common.py  gemini.py  (+2 more)
tests/unit/: test_adapters.py  test_concurrency.py  test_exporters_new.py  test_extraction_regression.py  test_middleware.py  test_package_imports.py  test_tokenizers.py
(+55 files in other folders)
