[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binomialhash"
version = "0.1.0"
description = "Structured payload compaction and manifold-aware analytics for LLM tool outputs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Binomial Capital Management", email = "support@bcmassets.com"}
]
dependencies = [
    "numpy>=1.26,<3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
openai = ["tiktoken>=0.7"]
xai = ["tiktoken>=0.7"]
anthropic = []
gemini = []
excel = ["openpyxl>=3.1"]
all = [
    "tiktoken>=0.7",
    "openpyxl>=3.1",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "tiktoken>=0.7",
]

[project.urls]
Homepage = "https://binomialsentry.ai"
Repository = "https://github.com/Binomial-Capital-Management/binomialhash"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

